# what-to-eat

./: .env.example  README.md  SUMMARY.md  pyproject.toml
.ai/: WORKLOG.md
backend/: main.py  recognition.py
docs/: FOOD_RECOGNITION_PLAN.md  MVP_WORKFLOW.md  MY_Devices.md
docs/Archived/: DESIGN.md
frontend/: .env.example  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: test_recognition.py  test_upload.py
