[project]
name = "what-to-eat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "openai>=2.0.0",
    "pillow-heif>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.51.0",
]
